<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="sos.rock.sosapp.Register.SignupUserinfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/inputTextStyle"
            android:layout_marginRight="@dimen/dimen_0dp"
            android:layout_marginEnd="@dimen/dimen_0dp">

            <EditText
                android:id="@+id/txtFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextStyle"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/dimen_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/inputTextStyle">

            <EditText
                android:id="@+id/txtLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextStyle"
                android:hint="@string/last_name"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/inputTextStyle"
        android:layout_marginTop="@dimen/dimen_5dp">

        <EditText
            android:id="@+id/txtUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"
            android:hint="@string/nick_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/inputTextStyle"
        android:layout_marginTop="@dimen/dimen_5dp">

        <EditText
            android:id="@+id/txtUserAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"
            android:hint="@string/age"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:buttonTint="@color/icons"
        android:text="@string/married"
        android:textSize="@dimen/font_small_text"
        android:textColor="@color/icons"
        android:id="@+id/chkMarried"
        android:layout_marginLeft="@dimen/dimen_30dp"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_gravity="left|start|center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btContinue"
        android:background="@drawable/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        android:text="@string/button_continue"
        android:textColor="@color/icons"
        android:textAllCaps="false"/>

</LinearLayout>
