<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context="sos.rock.sosapp.Main.Profile.ProfileFragment">

    <TextView
        style="@style/headerTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/change_profile"
        android:textSize="@dimen/font_head_text"
        android:textAlignment="gravity"
        android:textColor="@color/icons" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle"
                android:layout_marginTop="@dimen/dimen_10dp">

                <EditText
                    android:id="@+id/txtFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle"
                android:layout_marginTop="@dimen/dimen_5dp">

                <EditText
                    android:id="@+id/txtLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle"
                android:layout_marginTop="@dimen/dimen_5dp">

                <EditText
                    android:id="@+id/txtUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/user_id"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle"
                android:layout_marginTop="@dimen/dimen_5dp">

                <EditText
                    android:id="@+id/txtUserAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/age"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/icons"
                android:text="@string/married"
                android:textSize="@dimen/font_small_text"
                android:textColor="@color/icons"
                android:id="@+id/chkMarried"
                android:layout_marginLeft="@dimen/dimen_30dp"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_gravity="left|start|center"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle"
                android:layout_marginTop="@dimen/dimen_10dp">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle"
                android:layout_marginTop="@dimen/dimen_5dp">

                <EditText
                    android:id="@+id/txtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/city"
                    android:inputType="textPostalAddress" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:orientation="horizontal"
                android:background="@drawable/login_edit_background"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_15dp"
                    android:layout_marginRight="@dimen/dimen_15dp"
                    android:layout_gravity="center"
                    android:text="@string/phone_number"
                    android:textStyle="italic"
                    android:textColor="@color/tint_color"
                    android:textSize="@dimen/font_samll_medium_text"/>

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_medium_text"
                    android:textColor="@color/icons" />
            </LinearLayout>

            <Button
                android:id="@+id/btGetPhone"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_40dp"
                android:background="@null"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:text="@string/button_get_phone"
                android:textAllCaps="false"
                android:textColor="@color/icons"
                android:layout_gravity="right"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:orientation="horizontal"
                android:background="@drawable/login_edit_background"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_15dp"
                    android:layout_marginRight="@dimen/dimen_15dp"
                    android:layout_gravity="center"
                    android:text="@string/job"
                    android:textStyle="italic"
                    android:textColor="@color/tint_color"
                    android:textSize="@dimen/font_samll_medium_text"/>

                <Spinner
                    android:id="@+id/spJob"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50dp"
                    android:background="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:orientation="horizontal"
                android:background="@drawable/login_edit_background"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_15dp"
                    android:layout_marginRight="@dimen/dimen_15dp"
                    android:layout_gravity="center"
                    android:text="@string/study"
                    android:textStyle="italic"
                    android:textColor="@color/tint_color"
                    android:textSize="@dimen/font_samll_medium_text"/>

                <Spinner
                    android:id="@+id/spStudy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50dp"
                    android:background="@null" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle"
                android:layout_marginTop="@dimen/dimen_10dp">

                <EditText
                    android:id="@+id/txtSport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/sport"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btChangePassword"
                android:background="@drawable/button_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20dp"
                android:text="@string/change_password"
                android:textColor="@color/icons"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btChangeProfile"
                android:background="@drawable/button_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20dp"
                android:text="@string/button_save"
                android:textColor="@color/icons"
                android:textAllCaps="false"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
