<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sos.rock.sosapp.Register.SignupUsercontactFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/inputTextStyle"
        android:layout_marginTop="@dimen/dimen_40dp">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/inputTextStyle"
        android:layout_marginTop="@dimen/dimen_5dp">

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"
            android:hint="@string/city"
            android:inputType="textPostalAddress" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:orientation="horizontal"
        android:background="@drawable/login_edit_background"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:layout_gravity="center"
            android:text="@string/phone_number"
            android:textStyle="italic"
            android:textColor="@color/tint_color"
            android:textSize="@dimen/font_samll_medium_text"/>

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/font_medium_text"
            android:textColor="@color/icons" />
    </LinearLayout>

    <Button
        android:id="@+id/btGetPhone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40dp"
        android:background="@null"
        android:layout_marginRight="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        android:text="@string/button_get_phone"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:layout_gravity="right"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btBack"
            android:background="@drawable/button_continue"
            android:layout_margin="@dimen/dimen_20dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:textColor="@color/icons"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btContinue"
            android:background="@drawable/button_continue"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:text="@string/button_continue"
            android:textColor="@color/icons"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>
