<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sos.rock.sosapp.Main.Setting.ExtraNumbersActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            style="@style/headerTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:gravity="center"
            android:text="@string/extra_number"
            android:textSize="@dimen/font_head_text"
            android:textAlignment="gravity"
            android:textColor="@color/icons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_content"
            android:textSize="@dimen/font_medium_text"
            android:textStyle="italic"
            android:layout_margin="@dimen/dimen_20dp"
            android:textColor="@color/icons"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle"
                android:layout_marginRight="@dimen/dimen_0dp"
                android:layout_marginEnd="@dimen/dimen_0dp">

                <EditText
                    android:id="@+id/txtFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/dimen_0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/inputTextStyle">

                <EditText
                    android:id="@+id/txtLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextStyle"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/inputTextStyle">

            <EditText
                android:id="@+id/etExtraPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextStyle"
                android:hint="@string/extra_phone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btSave"
            android:background="@drawable/button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:text="@string/button_save"
            android:textColor="@color/icons"
            android:textAllCaps="false"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
